syntax = "proto3";

package posts.v1;
option go_package = "posts-service/proto;proto";

import "google/protobuf/timestamp.proto";

message Post {
  string id = 1;
  string owner_id = 2;
  string title = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreatePostRequest {
  string user_id = 1;
  string title = 2;
  string content = 3;
}
message CreatePostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
}
message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
  string user_id = 2;
}
message DeletePostResponse {
  bool success = 1;
}

message GetPostRequest {
  string id = 1;
  string user_id = 2;
}
message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}
message ListPostsResponse {
  repeated Post posts = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total = 4;
}

service PostsService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);

  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);

  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);

  rpc GetPost (GetPostRequest) returns (GetPostResponse);

  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
}
