syntax = "proto3";

package stats.v1;
option go_package = "stats-service/proto;proto";

message PostStatsRequest {
  string post_id = 1;
}

message PostStatsResponse {
  string post_id = 1;
  int64 views = 2;
  int64 likes = 3;
}

message TopPostsRequest {
  string metric = 1; // "views" or "likes"
  int32 limit = 2;
}

message PostItem {
  string post_id = 1;
  int64 value = 2;
}

message TopPostsResponse {
  repeated PostItem items = 1;
}

message TopUsersRequest {
  int32 limit = 1;
}

message UserItem {
  string user_id = 1;
  int64 likes = 2;
}

message TopUsersResponse {
  repeated UserItem users = 1;
}

service StatsService {
  rpc GetPostStats (PostStatsRequest) returns (PostStatsResponse);
  rpc GetTopPosts (TopPostsRequest) returns (TopPostsResponse);
  rpc GetTopUsersByLikes (TopUsersRequest) returns (TopUsersResponse);
}
